# tauria-tsgen

./: Cargo.toml  LICENSE  README.ja.md  README.md  make_test_datas.sh  run_tests.sh
.github/workflows/: rust.yml
npm/: .npmignore  README.md  package-lock.json  package.json
npm/scripts/: download-binary.js  postinstall.js
src/: cli.rs  main.rs
src/generator/: index_file_generator.rs  mod.rs  ts_file_generator.rs  type_extractor.rs
tauria-tsgen/src/: cli.rs
tauria-tsgen/src/generator/: index_file_generator.rs  ts_file_generator.rs  type_extractor.rs
tauria-tsgen/templates/: mock_api.tera
templates/: command_interfaces.tera  global_event_handler.tera  tauri_global_event_handler.tera  tauri_window_event_handler.tera  tauria_api.tera  user_types.tera  window_event_handler.tera
test/data/app_handle/src/: app_handle.rs
test/data/enum_test/src/: enum_test.rs
test/data/event_global/src/: event_global.rs
test/data/event_window/src/: event_test.rs
test/data/event_window_many/expected/: index.ts
test/data/event_window_many/src/: event_window_many.rs
test/data/multiple_files_test2/src/: cmd.rs
test/data/response/src/: response.rs
test/data/state/src/: state.rs
test/tauri-sample/: .prettierrc.json  angular.json  package-lock.json  package.json  tauria-tsgen-config.json
test/tauri-sample/src/: index.html
test/tauri-sample/src-tauri/: Cargo.toml  tauri.conf.json
test/tauri-sample/src-tauri/capabilities/: tauri-sample.json
test/tauri-sample/src-tauri/src/: lib.rs  main.rs
test/tauri-sample/src/app/: app.component.css  app.component.html  (+1 more)
(+118 files in other folders)
